Audio Capture 및 Recording 기능 추가

--- a/ProjectSound.uproject
+++ b/ProjectSound.uproject
@@ -7,7 +7,17 @@
 		{
 			"Name": "ProjectSound",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine"
+			]
+		}
+	],
+	"Plugins": [
+		{
+			"Name": "ParallelcubeAudioAnalyzer",
+			"Enabled": true,
+			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/c04ca3c256584bc1a7b94555e9ca0332"
 		}
 	]
 }
