--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -17,3 +17,6 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/ProjectSound")
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="ProjectSoundGameModeBase")
 
+[/Script/WindowsTargetPlatform.WindowsTargetSettings]
+bUseAudioStreamCaching=False
+
