--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -5,6 +5,7 @@ GameDefaultMap=/Game/StarterContent/Maps/Minimal_Default
 
 
 EditorStartupMap=/Game/StarterContent/Maps/Minimal_Default
+GameInstanceClass=/Script/ProjectSound.PS_GameInstance
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
